# CalculatorTest

./: .clang-format  .clang-tidy  CMakeLists.txt  calculator.h  checker.h  data.h  main.cpp  parser.h  printer.h  runner.h
src/: cache.cpp  cache.h  calculator.cpp  calculator.h  checker.cpp  checker.h  codeException.cpp  codeException.h  data.cpp  data.h  database.cpp  database.h  logger.cpp  logger.h  parser.cpp  parser.h  printer.cpp  printer.h  runner.cpp  runner.h
tests/: tests.cpp
